Migrated to Java 15, which involved one trivial change to SimpleConnectionPool.  Added the start of a RuntimeCompiler class, which will eventually switch configuration (and other things?) to Java instead of Nashorn and JavaScript.  Definitely WIP...